code/parser/aa.output
   0  $accept : programa $end

   1  programa : ID '{' conjunto_sentencias '}'

   2  conjunto_sentencias : sentencia
   3                      | conjunto_sentencias sentencia

   4  sentencia : sentencia_ejecutable
   5            | sentencia_declarativa

   6  sentencia_declarativa : UINT lista_variables ';'
   7                        | declaracion_funcion punto_y_coma_opcional

   8  punto_y_coma_opcional :
   9                        | ';'

  10  lista_variables : ID
  11                  | lista_variables ',' ID
  12                  | error ';'

  13  asignacion_multiple : lista_variables '=' lista_constantes

  14  lista_constantes : constante
  15                   | lista_constantes ',' constante

  16  lambda : '(' parametro_lambda ')' bloque_ejecutable '(' factor ')'

  17  parametro_lambda : UINT ID
  18                   |

  19  cuerpo_ejecutable : bloque_ejecutable
  20                    | sentencia_ejecutable

  21  bloque_ejecutable : '{' conjunto_sentencias_ejecutables '}'
  22                    | '{' '}'
  23                    |

  24  conjunto_sentencias_ejecutables : sentencia_ejecutable
  25                                  | conjunto_sentencias_ejecutables sentencia_ejecutable

  26  sentencia_ejecutable : operacion_ejecutable ';'
  27                       | operacion_ejecutable error

  28  operacion_ejecutable : invocacion_funcion
  29                       | asignacion_simple
  30                       | asignacion_multiple
  31                       | sentencia_control
  32                       | sentencia_retorno
  33                       | impresion
  34                       | lambda

  35  asignacion_simple : variable DASIG expresion

  36  sentencia_control : if
  37                    | while

  38  condicion : expresion comparador expresion
  39            |

  40  comparador : '>'
  41             | '<'
  42             | EQ
  43             | LEQ
  44             | GEQ
  45             | NEQ
  46             | error

  47  if : IF '(' condicion ')' cuerpo_ejecutable rama_else fin_if

  48  fin_if : ENDIF
  49         | error

  50  rama_else :
  51            | ELSE cuerpo_ejecutable

  52  while : DO cuerpo_ejecutable WHILE '(' condicion ')'

  53  impresion : PRINT '(' imprimible ')'

  54  imprimible : STR
  55             | expresion

  56  expresion : expresion operador_suma termino
  57            | termino

  58  operador_suma : '+'
  59                | '-'

  60  termino : termino operador_multiplicacion factor
  61          | factor

  62  operador_multiplicacion : '/'
  63                          | '*'

  64  factor : variable
  65         | constante
  66         | error

  67  constante : CTE
  68            | '-' CTE

  69  variable : ID
  70           | ID '.' ID

  71  declaracion_funcion : UINT ID '(' conjunto_parametros ')' '{' cuerpo_funcion '}'

  72  cuerpo_funcion : conjunto_sentencias
  73                 |

  74  sentencia_retorno : RETURN expresion

  75  conjunto_parametros : lista_parametros
  76                      |

  77  lista_parametros : parametro_formal
  78                   | lista_parametros ',' parametro_formal
  79                   | parametro_vacio

  80  parametro_vacio : lista_parametros ','
  81                  | ',' parametro_formal

  82  parametro_formal : semantica_pasaje UINT variable

  83  semantica_pasaje :
  84                   | CVR
  85                   | error

  86  invocacion_funcion : ID '(' lista_argumentos ')'

  87  lista_argumentos : argumento
  88                   | lista_argumentos ',' argumento

  89  argumento : expresion FLECHA ID

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2


state 1
	programa : ID . '{' conjunto_sentencias '}'  (1)

	'{'  shift 3
	.  error


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : ID '{' . conjunto_sentencias '}'  (1)

	error  shift 4
	ID  shift 5
	PRINT  shift 6
	IF  shift 7
	UINT  shift 8
	DO  shift 9
	RETURN  shift 10
	'('  shift 11
	.  error

	conjunto_sentencias  goto 12
	sentencia  goto 13
	sentencia_ejecutable  goto 14
	sentencia_declarativa  goto 15
	lista_variables  goto 16
	declaracion_funcion  goto 17
	asignacion_multiple  goto 18
	lambda  goto 19
	operacion_ejecutable  goto 20
	invocacion_funcion  goto 21
	asignacion_simple  goto 22
	sentencia_control  goto 23
	sentencia_retorno  goto 24
	impresion  goto 25
	variable  goto 26
	if  goto 27
	while  goto 28


state 4
	lista_variables : error . ';'  (12)

	';'  shift 29
	.  error


state 5
	lista_variables : ID .  (10)
	variable : ID .  (69)
	variable : ID . '.' ID  (70)
	invocacion_funcion : ID . '(' lista_argumentos ')'  (86)

	'('  shift 30
	'.'  shift 31
	DASIG  reduce 69
	','  reduce 10
	'='  reduce 10


state 6
	impresion : PRINT . '(' imprimible ')'  (53)

	'('  shift 32
	.  error


state 7
	if : IF . '(' condicion ')' cuerpo_ejecutable rama_else fin_if  (47)

	'('  shift 33
	.  error


state 8
	sentencia_declarativa : UINT . lista_variables ';'  (6)
	declaracion_funcion : UINT . ID '(' conjunto_parametros ')' '{' cuerpo_funcion '}'  (71)

	error  shift 4
	ID  shift 34
	.  error

	lista_variables  goto 35


state 9
	while : DO . cuerpo_ejecutable WHILE '(' condicion ')'  (52)
	bloque_ejecutable : .  (23)

	error  shift 4
	ID  shift 5
	PRINT  shift 6
	IF  shift 7
	DO  shift 9
	RETURN  shift 10
	'{'  shift 36
	'('  shift 11
	WHILE  reduce 23

	sentencia_ejecutable  goto 37
	lista_variables  goto 16
	asignacion_multiple  goto 18
	lambda  goto 19
	bloque_ejecutable  goto 38
	cuerpo_ejecutable  goto 39
	operacion_ejecutable  goto 20
	invocacion_funcion  goto 21
	asignacion_simple  goto 22
	sentencia_control  goto 23
	sentencia_retorno  goto 24
	impresion  goto 25
	variable  goto 26
	if  goto 27
	while  goto 28


state 10
	sentencia_retorno : RETURN . expresion  (74)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	'-'  shift 43
	.  error

	constante  goto 44
	factor  goto 45
	variable  goto 46
	expresion  goto 47
	termino  goto 48


state 11
	lambda : '(' . parametro_lambda ')' bloque_ejecutable '(' factor ')'  (16)
	parametro_lambda : .  (18)

	UINT  shift 49
	')'  reduce 18

	parametro_lambda  goto 50


state 12
	programa : ID '{' conjunto_sentencias . '}'  (1)
	conjunto_sentencias : conjunto_sentencias . sentencia  (3)

	error  shift 4
	ID  shift 5
	PRINT  shift 6
	IF  shift 7
	UINT  shift 8
	DO  shift 9
	RETURN  shift 10
	'}'  shift 51
	'('  shift 11
	.  error

	sentencia  goto 52
	sentencia_ejecutable  goto 14
	sentencia_declarativa  goto 15
	lista_variables  goto 16
	declaracion_funcion  goto 17
	asignacion_multiple  goto 18
	lambda  goto 19
	operacion_ejecutable  goto 20
	invocacion_funcion  goto 21
	asignacion_simple  goto 22
	sentencia_control  goto 23
	sentencia_retorno  goto 24
	impresion  goto 25
	variable  goto 26
	if  goto 27
	while  goto 28


state 13
	conjunto_sentencias : sentencia .  (2)

	.  reduce 2


state 14
	sentencia : sentencia_ejecutable .  (4)

	.  reduce 4


state 15
	sentencia : sentencia_declarativa .  (5)

	.  reduce 5


state 16
	lista_variables : lista_variables . ',' ID  (11)
	asignacion_multiple : lista_variables . '=' lista_constantes  (13)

	','  shift 53
	'='  shift 54
	.  error


state 17
	sentencia_declarativa : declaracion_funcion . punto_y_coma_opcional  (7)
	punto_y_coma_opcional : .  (8)

	';'  shift 55
	error  reduce 8
	ID  reduce 8
	PRINT  reduce 8
	IF  reduce 8
	UINT  reduce 8
	DO  reduce 8
	RETURN  reduce 8
	'}'  reduce 8
	'('  reduce 8

	punto_y_coma_opcional  goto 56


state 18
	operacion_ejecutable : asignacion_multiple .  (30)

	.  reduce 30


state 19
	operacion_ejecutable : lambda .  (34)

	.  reduce 34


state 20
	sentencia_ejecutable : operacion_ejecutable . ';'  (26)
	sentencia_ejecutable : operacion_ejecutable . error  (27)

	error  shift 57
	';'  shift 58
	.  error


state 21
	operacion_ejecutable : invocacion_funcion .  (28)

	.  reduce 28


state 22
	operacion_ejecutable : asignacion_simple .  (29)

	.  reduce 29


state 23
	operacion_ejecutable : sentencia_control .  (31)

	.  reduce 31


state 24
	operacion_ejecutable : sentencia_retorno .  (32)

	.  reduce 32


state 25
	operacion_ejecutable : impresion .  (33)

	.  reduce 33


state 26
	asignacion_simple : variable . DASIG expresion  (35)

	DASIG  shift 59
	.  error


state 27
	sentencia_control : if .  (36)

	.  reduce 36


state 28
	sentencia_control : while .  (37)

	.  reduce 37


state 29
	lista_variables : error ';' .  (12)

	.  reduce 12


state 30
	invocacion_funcion : ID '(' . lista_argumentos ')'  (86)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	'-'  shift 43
	.  error

	constante  goto 44
	factor  goto 45
	variable  goto 46
	expresion  goto 60
	termino  goto 48
	lista_argumentos  goto 61
	argumento  goto 62


state 31
	variable : ID '.' . ID  (70)

	ID  shift 63
	.  error


state 32
	impresion : PRINT '(' . imprimible ')'  (53)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	STR  shift 64
	'-'  shift 43
	.  error

	constante  goto 44
	factor  goto 45
	variable  goto 46
	expresion  goto 65
	imprimible  goto 66
	termino  goto 48


state 33
	if : IF '(' . condicion ')' cuerpo_ejecutable rama_else fin_if  (47)
	condicion : .  (39)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	'-'  shift 43
	')'  reduce 39

	constante  goto 44
	factor  goto 45
	variable  goto 46
	expresion  goto 67
	condicion  goto 68
	termino  goto 48


state 34
	lista_variables : ID .  (10)
	declaracion_funcion : UINT ID . '(' conjunto_parametros ')' '{' cuerpo_funcion '}'  (71)

	'('  shift 69
	';'  reduce 10
	','  reduce 10


state 35
	sentencia_declarativa : UINT lista_variables . ';'  (6)
	lista_variables : lista_variables . ',' ID  (11)

	';'  shift 70
	','  shift 53
	.  error


state 36
	bloque_ejecutable : '{' . conjunto_sentencias_ejecutables '}'  (21)
	bloque_ejecutable : '{' . '}'  (22)

	error  shift 4
	ID  shift 5
	PRINT  shift 6
	IF  shift 7
	DO  shift 9
	RETURN  shift 10
	'}'  shift 71
	'('  shift 11
	.  error

	sentencia_ejecutable  goto 72
	lista_variables  goto 16
	asignacion_multiple  goto 18
	lambda  goto 19
	conjunto_sentencias_ejecutables  goto 73
	operacion_ejecutable  goto 20
	invocacion_funcion  goto 21
	asignacion_simple  goto 22
	sentencia_control  goto 23
	sentencia_retorno  goto 24
	impresion  goto 25
	variable  goto 26
	if  goto 27
	while  goto 28


state 37
	cuerpo_ejecutable : sentencia_ejecutable .  (20)

	.  reduce 20


state 38
	cuerpo_ejecutable : bloque_ejecutable .  (19)

	.  reduce 19


state 39
	while : DO cuerpo_ejecutable . WHILE '(' condicion ')'  (52)

	WHILE  shift 74
	.  error


state 40
	factor : error .  (66)

	.  reduce 66


state 41
	variable : ID .  (69)
	variable : ID . '.' ID  (70)

	'.'  shift 31
	error  reduce 69
	EQ  reduce 69
	GEQ  reduce 69
	LEQ  reduce 69
	NEQ  reduce 69
	FLECHA  reduce 69
	';'  reduce 69
	','  reduce 69
	')'  reduce 69
	'>'  reduce 69
	'<'  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'/'  reduce 69
	'*'  reduce 69


state 42
	constante : CTE .  (67)

	.  reduce 67


state 43
	constante : '-' . CTE  (68)

	CTE  shift 75
	.  error


state 44
	factor : constante .  (65)

	.  reduce 65


state 45
	termino : factor .  (61)

	.  reduce 61


state 46
	factor : variable .  (64)

	.  reduce 64


state 47
	expresion : expresion . operador_suma termino  (56)
	sentencia_retorno : RETURN expresion .  (74)

	'+'  shift 76
	'-'  shift 77
	error  reduce 74
	';'  reduce 74

	operador_suma  goto 78


state 48
	expresion : termino .  (57)
	termino : termino . operador_multiplicacion factor  (60)

	'/'  shift 79
	'*'  shift 80
	error  reduce 57
	EQ  reduce 57
	GEQ  reduce 57
	LEQ  reduce 57
	NEQ  reduce 57
	FLECHA  reduce 57
	';'  reduce 57
	')'  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	'+'  reduce 57
	'-'  reduce 57

	operador_multiplicacion  goto 81


state 49
	parametro_lambda : UINT . ID  (17)

	ID  shift 82
	.  error


state 50
	lambda : '(' parametro_lambda . ')' bloque_ejecutable '(' factor ')'  (16)

	')'  shift 83
	.  error


state 51
	programa : ID '{' conjunto_sentencias '}' .  (1)

	.  reduce 1


state 52
	conjunto_sentencias : conjunto_sentencias sentencia .  (3)

	.  reduce 3


state 53
	lista_variables : lista_variables ',' . ID  (11)

	ID  shift 84
	.  error


state 54
	asignacion_multiple : lista_variables '=' . lista_constantes  (13)

	CTE  shift 42
	'-'  shift 43
	.  error

	lista_constantes  goto 85
	constante  goto 86


state 55
	punto_y_coma_opcional : ';' .  (9)

	.  reduce 9


state 56
	sentencia_declarativa : declaracion_funcion punto_y_coma_opcional .  (7)

	.  reduce 7


state 57
	sentencia_ejecutable : operacion_ejecutable error .  (27)

	.  reduce 27


state 58
	sentencia_ejecutable : operacion_ejecutable ';' .  (26)

	.  reduce 26


state 59
	asignacion_simple : variable DASIG . expresion  (35)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	'-'  shift 43
	.  error

	constante  goto 44
	factor  goto 45
	variable  goto 46
	expresion  goto 87
	termino  goto 48


state 60
	expresion : expresion . operador_suma termino  (56)
	argumento : expresion . FLECHA ID  (89)

	FLECHA  shift 88
	'+'  shift 76
	'-'  shift 77
	.  error

	operador_suma  goto 78


state 61
	invocacion_funcion : ID '(' lista_argumentos . ')'  (86)
	lista_argumentos : lista_argumentos . ',' argumento  (88)

	','  shift 89
	')'  shift 90
	.  error


state 62
	lista_argumentos : argumento .  (87)

	.  reduce 87


state 63
	variable : ID '.' ID .  (70)

	.  reduce 70


state 64
	imprimible : STR .  (54)

	.  reduce 54


state 65
	imprimible : expresion .  (55)
	expresion : expresion . operador_suma termino  (56)

	'+'  shift 76
	'-'  shift 77
	')'  reduce 55

	operador_suma  goto 78


state 66
	impresion : PRINT '(' imprimible . ')'  (53)

	')'  shift 91
	.  error


state 67
	condicion : expresion . comparador expresion  (38)
	expresion : expresion . operador_suma termino  (56)

	error  shift 92
	EQ  shift 93
	GEQ  shift 94
	LEQ  shift 95
	NEQ  shift 96
	'>'  shift 97
	'<'  shift 98
	'+'  shift 76
	'-'  shift 77
	.  error

	comparador  goto 99
	operador_suma  goto 78


state 68
	if : IF '(' condicion . ')' cuerpo_ejecutable rama_else fin_if  (47)

	')'  shift 100
	.  error


state 69
	declaracion_funcion : UINT ID '(' . conjunto_parametros ')' '{' cuerpo_funcion '}'  (71)
	conjunto_parametros : .  (76)
	semantica_pasaje : .  (83)

	error  shift 101
	CVR  shift 102
	','  shift 103
	UINT  reduce 83
	')'  reduce 76

	conjunto_parametros  goto 104
	lista_parametros  goto 105
	parametro_formal  goto 106
	parametro_vacio  goto 107
	semantica_pasaje  goto 108


state 70
	sentencia_declarativa : UINT lista_variables ';' .  (6)

	.  reduce 6


state 71
	bloque_ejecutable : '{' '}' .  (22)

	.  reduce 22


state 72
	conjunto_sentencias_ejecutables : sentencia_ejecutable .  (24)

	.  reduce 24


state 73
	bloque_ejecutable : '{' conjunto_sentencias_ejecutables . '}'  (21)
	conjunto_sentencias_ejecutables : conjunto_sentencias_ejecutables . sentencia_ejecutable  (25)

	error  shift 4
	ID  shift 5
	PRINT  shift 6
	IF  shift 7
	DO  shift 9
	RETURN  shift 10
	'}'  shift 109
	'('  shift 11
	.  error

	sentencia_ejecutable  goto 110
	lista_variables  goto 16
	asignacion_multiple  goto 18
	lambda  goto 19
	operacion_ejecutable  goto 20
	invocacion_funcion  goto 21
	asignacion_simple  goto 22
	sentencia_control  goto 23
	sentencia_retorno  goto 24
	impresion  goto 25
	variable  goto 26
	if  goto 27
	while  goto 28


state 74
	while : DO cuerpo_ejecutable WHILE . '(' condicion ')'  (52)

	'('  shift 111
	.  error


state 75
	constante : '-' CTE .  (68)

	.  reduce 68


state 76
	operador_suma : '+' .  (58)

	.  reduce 58


state 77
	operador_suma : '-' .  (59)

	.  reduce 59


state 78
	expresion : expresion operador_suma . termino  (56)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	'-'  shift 43
	.  error

	constante  goto 44
	factor  goto 45
	variable  goto 46
	termino  goto 112


state 79
	operador_multiplicacion : '/' .  (62)

	.  reduce 62


state 80
	operador_multiplicacion : '*' .  (63)

	.  reduce 63


state 81
	termino : termino operador_multiplicacion . factor  (60)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	'-'  shift 43
	.  error

	constante  goto 44
	factor  goto 113
	variable  goto 46


state 82
	parametro_lambda : UINT ID .  (17)

	.  reduce 17


state 83
	lambda : '(' parametro_lambda ')' . bloque_ejecutable '(' factor ')'  (16)
	bloque_ejecutable : .  (23)

	'{'  shift 36
	'('  reduce 23

	bloque_ejecutable  goto 114


state 84
	lista_variables : lista_variables ',' ID .  (11)

	.  reduce 11


state 85
	asignacion_multiple : lista_variables '=' lista_constantes .  (13)
	lista_constantes : lista_constantes . ',' constante  (15)

	','  shift 115
	error  reduce 13
	';'  reduce 13


state 86
	lista_constantes : constante .  (14)

	.  reduce 14


state 87
	asignacion_simple : variable DASIG expresion .  (35)
	expresion : expresion . operador_suma termino  (56)

	'+'  shift 76
	'-'  shift 77
	error  reduce 35
	';'  reduce 35

	operador_suma  goto 78


state 88
	argumento : expresion FLECHA . ID  (89)

	ID  shift 116
	.  error


state 89
	lista_argumentos : lista_argumentos ',' . argumento  (88)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	'-'  shift 43
	.  error

	constante  goto 44
	factor  goto 45
	variable  goto 46
	expresion  goto 60
	termino  goto 48
	argumento  goto 117


state 90
	invocacion_funcion : ID '(' lista_argumentos ')' .  (86)

	.  reduce 86


state 91
	impresion : PRINT '(' imprimible ')' .  (53)

	.  reduce 53


state 92
	comparador : error .  (46)

	.  reduce 46


state 93
	comparador : EQ .  (42)

	.  reduce 42


state 94
	comparador : GEQ .  (44)

	.  reduce 44


state 95
	comparador : LEQ .  (43)

	.  reduce 43


state 96
	comparador : NEQ .  (45)

	.  reduce 45


state 97
	comparador : '>' .  (40)

	.  reduce 40


state 98
	comparador : '<' .  (41)

	.  reduce 41


state 99
	condicion : expresion comparador . expresion  (38)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	'-'  shift 43
	.  error

	constante  goto 44
	factor  goto 45
	variable  goto 46
	expresion  goto 118
	termino  goto 48


100: shift/reduce conflict (shift 4, reduce 23) on error
state 100
	if : IF '(' condicion ')' . cuerpo_ejecutable rama_else fin_if  (47)
	bloque_ejecutable : .  (23)

	error  shift 4
	ID  shift 5
	PRINT  shift 6
	IF  shift 7
	DO  shift 9
	RETURN  shift 10
	'{'  shift 36
	'('  shift 11
	ELSE  reduce 23
	ENDIF  reduce 23

	sentencia_ejecutable  goto 37
	lista_variables  goto 16
	asignacion_multiple  goto 18
	lambda  goto 19
	bloque_ejecutable  goto 38
	cuerpo_ejecutable  goto 119
	operacion_ejecutable  goto 20
	invocacion_funcion  goto 21
	asignacion_simple  goto 22
	sentencia_control  goto 23
	sentencia_retorno  goto 24
	impresion  goto 25
	variable  goto 26
	if  goto 27
	while  goto 28


state 101
	semantica_pasaje : error .  (85)

	.  reduce 85


state 102
	semantica_pasaje : CVR .  (84)

	.  reduce 84


state 103
	parametro_vacio : ',' . parametro_formal  (81)
	semantica_pasaje : .  (83)

	error  shift 101
	CVR  shift 102
	UINT  reduce 83

	parametro_formal  goto 120
	semantica_pasaje  goto 108


state 104
	declaracion_funcion : UINT ID '(' conjunto_parametros . ')' '{' cuerpo_funcion '}'  (71)

	')'  shift 121
	.  error


state 105
	conjunto_parametros : lista_parametros .  (75)
	lista_parametros : lista_parametros . ',' parametro_formal  (78)
	parametro_vacio : lista_parametros . ','  (80)

	','  shift 122
	')'  reduce 75


state 106
	lista_parametros : parametro_formal .  (77)

	.  reduce 77


state 107
	lista_parametros : parametro_vacio .  (79)

	.  reduce 79


state 108
	parametro_formal : semantica_pasaje . UINT variable  (82)

	UINT  shift 123
	.  error


state 109
	bloque_ejecutable : '{' conjunto_sentencias_ejecutables '}' .  (21)

	.  reduce 21


state 110
	conjunto_sentencias_ejecutables : conjunto_sentencias_ejecutables sentencia_ejecutable .  (25)

	.  reduce 25


state 111
	while : DO cuerpo_ejecutable WHILE '(' . condicion ')'  (52)
	condicion : .  (39)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	'-'  shift 43
	')'  reduce 39

	constante  goto 44
	factor  goto 45
	variable  goto 46
	expresion  goto 67
	condicion  goto 124
	termino  goto 48


state 112
	expresion : expresion operador_suma termino .  (56)
	termino : termino . operador_multiplicacion factor  (60)

	'/'  shift 79
	'*'  shift 80
	error  reduce 56
	EQ  reduce 56
	GEQ  reduce 56
	LEQ  reduce 56
	NEQ  reduce 56
	FLECHA  reduce 56
	';'  reduce 56
	')'  reduce 56
	'>'  reduce 56
	'<'  reduce 56
	'+'  reduce 56
	'-'  reduce 56

	operador_multiplicacion  goto 81


state 113
	termino : termino operador_multiplicacion factor .  (60)

	.  reduce 60


state 114
	lambda : '(' parametro_lambda ')' bloque_ejecutable . '(' factor ')'  (16)

	'('  shift 125
	.  error


state 115
	lista_constantes : lista_constantes ',' . constante  (15)

	CTE  shift 42
	'-'  shift 43
	.  error

	constante  goto 126


state 116
	argumento : expresion FLECHA ID .  (89)

	.  reduce 89


state 117
	lista_argumentos : lista_argumentos ',' argumento .  (88)

	.  reduce 88


state 118
	condicion : expresion comparador expresion .  (38)
	expresion : expresion . operador_suma termino  (56)

	'+'  shift 76
	'-'  shift 77
	')'  reduce 38

	operador_suma  goto 78


state 119
	if : IF '(' condicion ')' cuerpo_ejecutable . rama_else fin_if  (47)
	rama_else : .  (50)

	ELSE  shift 127
	error  reduce 50
	ENDIF  reduce 50

	rama_else  goto 128


state 120
	parametro_vacio : ',' parametro_formal .  (81)

	.  reduce 81


state 121
	declaracion_funcion : UINT ID '(' conjunto_parametros ')' . '{' cuerpo_funcion '}'  (71)

	'{'  shift 129
	.  error


state 122
	lista_parametros : lista_parametros ',' . parametro_formal  (78)
	parametro_vacio : lista_parametros ',' .  (80)
	semantica_pasaje : .  (83)

	error  shift 101
	CVR  shift 102
	UINT  reduce 83
	','  reduce 80
	')'  reduce 80

	parametro_formal  goto 130
	semantica_pasaje  goto 108


state 123
	parametro_formal : semantica_pasaje UINT . variable  (82)

	ID  shift 41
	.  error

	variable  goto 131


state 124
	while : DO cuerpo_ejecutable WHILE '(' condicion . ')'  (52)

	')'  shift 132
	.  error


state 125
	lambda : '(' parametro_lambda ')' bloque_ejecutable '(' . factor ')'  (16)

	error  shift 40
	ID  shift 41
	CTE  shift 42
	'-'  shift 43
	.  error

	constante  goto 44
	factor  goto 133
	variable  goto 46


state 126
	lista_constantes : lista_constantes ',' constante .  (15)

	.  reduce 15


127: shift/reduce conflict (shift 4, reduce 23) on error
state 127
	rama_else : ELSE . cuerpo_ejecutable  (51)
	bloque_ejecutable : .  (23)

	error  shift 4
	ID  shift 5
	PRINT  shift 6
	IF  shift 7
	DO  shift 9
	RETURN  shift 10
	'{'  shift 36
	'('  shift 11
	ENDIF  reduce 23

	sentencia_ejecutable  goto 37
	lista_variables  goto 16
	asignacion_multiple  goto 18
	lambda  goto 19
	bloque_ejecutable  goto 38
	cuerpo_ejecutable  goto 134
	operacion_ejecutable  goto 20
	invocacion_funcion  goto 21
	asignacion_simple  goto 22
	sentencia_control  goto 23
	sentencia_retorno  goto 24
	impresion  goto 25
	variable  goto 26
	if  goto 27
	while  goto 28


state 128
	if : IF '(' condicion ')' cuerpo_ejecutable rama_else . fin_if  (47)

	error  shift 135
	ENDIF  shift 136
	.  error

	fin_if  goto 137


state 129
	declaracion_funcion : UINT ID '(' conjunto_parametros ')' '{' . cuerpo_funcion '}'  (71)
	cuerpo_funcion : .  (73)

	error  shift 4
	ID  shift 5
	PRINT  shift 6
	IF  shift 7
	UINT  shift 8
	DO  shift 9
	RETURN  shift 10
	'('  shift 11
	'}'  reduce 73

	conjunto_sentencias  goto 138
	sentencia  goto 13
	sentencia_ejecutable  goto 14
	sentencia_declarativa  goto 15
	lista_variables  goto 16
	declaracion_funcion  goto 17
	asignacion_multiple  goto 18
	lambda  goto 19
	operacion_ejecutable  goto 20
	invocacion_funcion  goto 21
	asignacion_simple  goto 22
	sentencia_control  goto 23
	sentencia_retorno  goto 24
	impresion  goto 25
	variable  goto 26
	if  goto 27
	while  goto 28
	cuerpo_funcion  goto 139


state 130
	lista_parametros : lista_parametros ',' parametro_formal .  (78)

	.  reduce 78


state 131
	parametro_formal : semantica_pasaje UINT variable .  (82)

	.  reduce 82


state 132
	while : DO cuerpo_ejecutable WHILE '(' condicion ')' .  (52)

	.  reduce 52


state 133
	lambda : '(' parametro_lambda ')' bloque_ejecutable '(' factor . ')'  (16)

	')'  shift 140
	.  error


state 134
	rama_else : ELSE cuerpo_ejecutable .  (51)

	.  reduce 51


state 135
	fin_if : error .  (49)

	.  reduce 49


state 136
	fin_if : ENDIF .  (48)

	.  reduce 48


state 137
	if : IF '(' condicion ')' cuerpo_ejecutable rama_else fin_if .  (47)

	.  reduce 47


state 138
	conjunto_sentencias : conjunto_sentencias . sentencia  (3)
	cuerpo_funcion : conjunto_sentencias .  (72)

	error  shift 4
	ID  shift 5
	PRINT  shift 6
	IF  shift 7
	UINT  shift 8
	DO  shift 9
	RETURN  shift 10
	'('  shift 11
	'}'  reduce 72

	sentencia  goto 52
	sentencia_ejecutable  goto 14
	sentencia_declarativa  goto 15
	lista_variables  goto 16
	declaracion_funcion  goto 17
	asignacion_multiple  goto 18
	lambda  goto 19
	operacion_ejecutable  goto 20
	invocacion_funcion  goto 21
	asignacion_simple  goto 22
	sentencia_control  goto 23
	sentencia_retorno  goto 24
	impresion  goto 25
	variable  goto 26
	if  goto 27
	while  goto 28


state 139
	declaracion_funcion : UINT ID '(' conjunto_parametros ')' '{' cuerpo_funcion . '}'  (71)

	'}'  shift 141
	.  error


state 140
	lambda : '(' parametro_lambda ')' bloque_ejecutable '(' factor ')' .  (16)

	.  reduce 16


state 141
	declaracion_funcion : UINT ID '(' conjunto_parametros ')' '{' cuerpo_funcion '}' .  (71)

	.  reduce 71


State 100 contains 1 shift/reduce conflict.
State 127 contains 1 shift/reduce conflict.


34 terminals, 44 nonterminals
90 grammar rules, 142 states
